2002-07-18  Christian Rose  <menthos@menthos.com>

	* translation-status.xml: Corrected branch of gnome-games to
	gnome-2-0.

2002-07-18  Christian Rose  <menthos@menthos.com>

	* translation-status.xml: Corrected branch of gnome-control-center
	to gnome-2-0.

2002-07-17  Christian Rose  <menthos@menthos.com>

	* translation-status.xml: Added vte.

2002-07-16  Christian Rose  <menthos@menthos.com>

	* translation-status.xml: Fixed the pot file name for gnomemeeting.

2002-07-14  Carlos Perello Marin <carlos@gnome-db.org>

	* translation-status.xml: Updated the profterm branch to gnome-2-0.

2002-07-11  Christian Rose  <menthos@menthos.com>

	* translation-status.xml: Added rhythmbox.

2002-07-08  Christian Rose  <menthos@menthos.com>

	* translation-status.xml: Changed branch to gnome-2-0 for
	gnome-applets.

2002-07-06  Christian Rose  <menthos@menthos.com>

	* translation-status.xml: Changed info for gnomeradio.

2002-07-05  Christian Rose  <menthos@menthos.com>

	* translation-status.xml: Updated branches for bonobo-activation,
	eel, gedit, gnome-control-center, gnome-media, libbonobo,
	libbonoboui, and nautilus: switched gnome-2-0-0 branches to HEAD.

2002-07-01  Carlos Perello Marin <carlos@gnome-db.org>

	* translation-status.xml: Updated gnome-control-center branch.
	Sorry I'm working on a new status program (really cool) and I forgot
	to update this.

2002-06-26  Yanko Kaneti  <yaneti@declera.com>

	* translation-status.xml: Updated eog branch.
	http://mail.gnome.org/archives/eog-list/2002-June/msg00009.html

2002-06-20  Abel Cheung  <maddog@linux.org.hk>

	* translation-status.xml: Updated gnome-media branch.

2002-06-18  Carlos Perello Marin <carlos@gnome-db.org>

	* translation-status.xml: Updated some branchs.

2002-06-17  Carlos Perello Marin <carlos@gnome-db.org>

        * translation-status.xml: Changed the gnome-utils branch.
	
2002-06-16  Carlos Perello Marin <carlos@gnome-db.org>

	* translation-status.xml: Small fixes.
