@@ -1336,6 +1336,17 @@
       </component>
     </version>
   </module>
+  <module name="gnome-vfs-extras">
+    <version release="gnome-2.0-extras">
+      <component name="gnome-vfs-extras" dir="gnome-vfs-extras">
+        <podir dir="po"/>
+        <potname name="gnome-vfs-extras.pot"/>
+        <branch name="HEAD"/>
+        <regenerate/>
+        <download/>
+      </component>
+    </version>
+  </module>
   <module name="gnomemeeting">
     <version release="gnome-2.0-fifth-toe">
       <component name="gnomemeeting" dir="gnomemeeting">
