@@ -1,3 +1,7 @@
+2002-07-22  Christian Rose  <menthos@menthos.com>
+
+	* translation-status.xml: Added gnome-vfs-extras.
+
 2002-07-18  Christian Rose  <menthos@menthos.com>
 
 	* translation-status.xml: Corrected branch of gnome-games to
